feat: enhance prompts and add testing for OpenRouter API integration

--- a/tests/manual_testing.ipynb
+++ b/tests/manual_testing.ipynb
@@ -272,6 +272,70 @@
     "workflow.close()\n",
     "workflow = None"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a027785",
+   "metadata": {},
+   "source": [
+    "### Testing OperRouter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "abd18fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests, os, json\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "openrouter_api_key = os.getenv(\"OPENROUTER_API_KEY\")\n",
+    "model = \"tngtech/deepseek-r1t2-chimera:free\"\n",
+    "\n",
+    "response = requests.post(\n",
+    "  url=\"https://openrouter.ai/api/v1/chat/completions\",\n",
+    "  headers={\n",
+    "    \"Authorization\": \"Bearer \" + openrouter_api_key,\n",
+    "    \"Content-Type\": \"application/json\"\n",
+    "  },\n",
+    "  data=json.dumps({\n",
+    "    \"model\": model,\n",
+    "    \"messages\": [\n",
+    "      {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"What is the meaning of life?\"\n",
+    "      }\n",
+    "    ],\n",
+    "    \n",
+    "  })\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1b3d042a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The question of life\\'s meaning is one of humanity\\'s oldest and most profound inquiries. Different fields—philosophy, religion, science, and art—offer diverse perspectives. Below is a synthesis of key ideas:\\n\\n### 1. **Philosophical Perspectives**\\n   - **Existentialism** (e.g., Sartre, Camus): Life has no inherent meaning; we *create* purpose through choices, passions, and actions. Meaning emerges from authenticity, freedom, and responsibility.\\n   - **Absurdism** (Camus): Human desire for meaning clashes with an indifferent universe. The \"absurd\" lies in this tension, and resilience becomes the response (e.g., Sisyphus finding joy in his struggle).\\n   - **Eastern Traditions** (Buddhism, Taoism): Meaning arises from ending suffering (via enlightenment), harmonizing with nature, or embracing impermanence.\\n\\n### 2. **Religious/Spiritual Views**\\n   - **Monotheistic Faiths** (Christianity, Islam, Judaism): Purpose is tied to divine connection—serving God, loving others, and attaining salvation or eternal life.\\n   - **Dharma-based Faiths** (Hinduism): Meaning comes from fulfilling one’s moral and cosmic duties (dharma) and achieving spiritual liberation (moksha).\\n\\n### 3. **Scientific Viewpoints**\\n   - **Biological Evolution**: Life’s \"purpose\" is survival and reproduction, driven by natural selection.\\n   - **Cosmic Perspective**: From astrophysics, life is a rare, fleeting phenomenon in a vast universe—making its meaning a human construct.\\n\\n### 4. **Personal Meaning**\\n   Many find purpose through:\\n   - **Connection**: Love, family, friendship.\\n   - **Contribution**: Creativity, helping others, activism.\\n   - **Growth**: Learning, self-improvement, overcoming challenges.\\n   - **Experience**: Beauty, joy, curiosity, or wonder.\\n\\n### In Short:\\nThere is no universal, objective answer—meaning is subjective and often cultivated through **relationships, goals**, and **engagement with the world**. As Viktor Frankl wrote in *Man’s Search for Meaning*, we discover purpose not by questioning life, but by answering life’s demands through our actions and attitudes.\\n\\n### Questions to Reflect On:\\n- What brings *you* joy, fulfillment, or a sense of contribution?\\n- How do you want to impact others or the world?\\n- What legacy, big or small, do you wish to leave?\\n\\nThe search itself may be part of the answer. 🌟'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_data = response.json()\n",
+    "\n",
+    "response_data[\"choices\"][0][\"message\"][\"content\"].strip()"
+   ]
   }
  ],
  "metadata": {
